tests/error/poly_errors/arg_mismatch3.err
Error: Type mismatch (at $FILE:17:11)
   | 
15 | @guppy(module)
16 | def main(x: array[int, 42], y: array[int, 43]) -> None:
17 |     foo(x, y)
   |            ^ Expected argument of type `array[int, 42]`, got `array[int,
   |              43]`

Guppy compilation failed due to 1 previous error
